# einburgerungstest-bot

./: .env.example  .gitignore  LICENSE  README.md  appointment_checker.py  bot.py  deploy.sh  pyproject.toml  telegram_notifier.py
