[project]
name = "einburgerungstest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.0",
    "beautifulsoup4>=4.13.4",
    "httpx>=0.28.1",
    "python-dotenv>=1.1.1",
    "python-telegram-bot>=22.3",
]
